@@ -1,3 +1,11 @@
+1999-12-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* lib/smi.c (smiReadConfig): a global and a user configuration
+	file are now read, if existent: /usr/local/etc/smi.conf and
+	~/.smirc. The first and only directive `load <module>' may be
+	used to preload any MIB modules. This feature still needs some
+	enhancements, like per application directives.
+
 1999-11-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* tools/smidump.c: Again, Juergen Schoenwaelder contributed
